--- a/projeto/index.html
+++ b/projeto/index.html
@@ -7,6 +7,11 @@
     <title>Sitema de tarefas</title>
 </head>
 <body>
+    <h1>Sitema de Tarefas</h1>
+    <p>
+        <input type="text" id="task" size="30px" maxlength="50">
+    </p>
     
+
 </body>
 </html>
