Criando os botões adicionar e remover tarefas e a lista

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -9,8 +9,12 @@
 <body>
     <h1>Sitema de Tarefas</h1>
     <p>
-        <input type="text" id="task" size="30px" maxlength="50">
+        <input type="text" id="task" size="30px" maxlength="35">
     </p>
+    <button type="submit" onclick="adicionarTarefa()">Adcionar tarefa</button>
+    <button type="submit" onclick="removerTarefa()">Remover tarefa</button>
+
+    <p id="lista"></p>
     
 
 </body>
