Criando a função adicional tarefa

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -15,7 +15,7 @@
     <button type="submit" onclick="removerTarefa()">Remover tarefa</button>
 
     <p id="lista"></p>
-    
 
+<script src="/projeto/src/js/script.js"></script>
 </body>
 </html>
