Adicionando função de remover tarefa

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/estilo.css">
-    <title>Sitema de tarefas</title>
+    <title>Sistema de tarefas</title>
 </head>
 <body>
     <h1>Sitema de Tarefas</h1>
     <p>
         <input type="text" id="task" size="30px" maxlength="35">
     </p>
-    <button type="submit" onclick="adicionarTarefa()">Adcionar tarefa</button>
+    <button type="submit" onclick="adicionarTarefa()">Adicionar tarefa</button>
     <button type="submit" onclick="removerTarefa()">Remover tarefa</button>
 
     <p id="lista"></p>
