Aula dia 17 de fev

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -7,15 +7,20 @@
     <title>Sistema de tarefas</title>
 </head>
 <body>
-    <h1>Sitema de Tarefas</h1>
-    <p>
-        <input type="text" id="task" size="30px" maxlength="35">
-    </p>
-    <button type="submit" onclick="adicionarTarefa()">Adicionar tarefa</button>
-    <button type="submit" onclick="removerTarefa()">Remover tarefa</button>
+    <div class="container">
+        <div class="abc">
+            <h1>Sistema de Tarefas</h1>
+            <p>
+                <input type="text" id="task" size="30px" maxlength="35">
+            </p>
+            <button type="submit" onclick="adicionarTarefa()">Adicionar tarefa</button>
+            <button type="submit" onclick="removerTarefa()">Remover tarefa</button>
 
-    <p id="lista"></p>
+            <p id="lista"></p>
+        </div>    
+    </div>
 
-<script src="/projeto/src/js/script.js"></script>
+    <script src="/projeto/src/js/script.js"></script>
+    <!-- <script src="./src/js/teste.js"></script> -->
 </body>
 </html>
